--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,14 @@ jobs:
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
       - name: Format Check
         run: test -z $(go fmt ./...)
 
       - name: Linting Check
         run: staticcheck ./...
+
+      - name: Security Check
+        run: gosec ./...
